<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_400"
    tools:context=".LoginFragment">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:autofillHints="@string/app_name"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUser"
        style="@style/Widget.IMDb.TextInputEditText.Login"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelUser"
        android:hint="@string/user"
        android:textColorHint="@color/white"
        tools:text="juanpedro@gmail.com"
        android:autofillHints="" />

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.IMDb.LoginLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextUser"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.IMDb.LoginLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/Widget.IMDb.TextInputEditText.Login"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:text="MyPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword"
        android:autofillHints="@string/password" />

    <TextView
        android:id="@+id/labelForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.IMDb.Caption"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/Widget.IMDb.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:enabled="true"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelForgotPassword" />

    <TextView
        android:id="@+id/labelLoginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_with"
        android:textAppearance="@style/TextAppearance.IMDb.ItalicBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <FrameLayout
        android:id="@+id/facebook_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLoginWith"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_white_circle"
            android:contentDescription="@string/img_facebook" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:contentDescription=""
            android:src="@drawable/ic_facebook"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/facebook_btn"
        app:layout_constraintTop_toTopOf="@+id/facebook_btn"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_white_circle"
            android:contentDescription="@string/img_google"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_google"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/apple_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/facebook_btn"
        app:layout_constraintTop_toTopOf="@+id/facebook_btn"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_white_circle"
            android:contentDescription="@string/img_apple"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_apple"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

    </FrameLayout>

    <TextView
        android:id="@+id/labelHasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-8dp"
        android:text="@string/has_account"
        android:textAppearance="@style/TextAppearance.IMDb.ItalicBody"
        app:layout_constraintBottom_toTopOf="@+id/labelGuest"
        app:layout_constraintStart_toStartOf="@+id/apple_btn"
        app:layout_constraintTop_toBottomOf="@+id/apple_btn" />

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.IMDb.DarkItalicBody"
        app:layout_constraintStart_toEndOf="@+id/labelHasAccount"
        app:layout_constraintTop_toTopOf="@+id/labelHasAccount" />

    <TextView
        android:id="@+id/labelGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/guest"
        android:textAppearance="@style/TextAppearance.IMDb.DarkBody"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>